fix: #51132 flex-wrap btn group school widget

--- a/scss/components/widget/_school.scss
+++ b/scss/components/widget/_school.scss
@@ -70,6 +70,7 @@
     .btn-group {
         padding: 1.6rem;
         padding-bottom: 0;
+        flex-wrap: wrap;
 
         > * {
             padding: 0.6rem 1.5rem;
